# checkers

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml  weekly.yml
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: allocator.rs  event.rs  events.rs  lib.rs  machine.rs  utils.rs  violation.rs
src/bt/: impl.rs  mock.rs
tests/: diagnostics_tests.rs  events_tests.rs  failed_tests.rs  leaky_tests.rs  realloc_tests.rs  zeroed_tests.rs
