[package]
name = "checkers"
version = "0.5.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/udoprog/checkers"
homepage = "https://github.com/udoprog/checkers"
documentation = "https://docs.rs/checkers"
description = """
A sanity checker for global allocations.
"""
keywords = ["memory", "heap", "allocator"]
categories = ["memory-management", "development-tools"]

[dependencies]
checkers-macros = {path = "./macros", version = "0.5.1", optional = true}
fxhash = {version = "0.2.1", optional = true}

[features]
default = ["realloc", "macros"]
realloc = ["fxhash"]
macros = ["checkers-macros"]