[package]
name = "checkers"
version = "0.6.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/udoprog/checkers"
homepage = "https://github.com/udoprog/checkers"
documentation = "https://docs.rs/checkers"
description = """
A sanity checker for global allocations.
"""
keywords = ["memory", "heap", "allocator"]
categories = ["memory-management", "development-tools"]

[dependencies]
checkers-macros = {path = "./macros", version = "0.6.0", optional = true}
fxhash = {version = "0.2.1", optional = true}
backtrace = {version = "0.3.61", optional = true}

[dev-dependencies]
lazy_static = "1.4.0"

[features]
default = ["realloc", "zeroed", "macros"]
realloc = ["fxhash"]
zeroed = []
macros = ["checkers-macros"]
