[package]
name = "checkers"
version = "0.6.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.56"
description = "A sanity checker for global allocations."
documentation = "https://docs.rs/checkers"
readme = "README.md"
homepage = "https://github.com/udoprog/checkers"
repository = "https://github.com/udoprog/checkers"
license = "MIT OR Apache-2.0"
keywords = ["allocator", "heap", "memory"]
categories = ["development-tools", "memory-management"]

[dependencies]
checkers-macros = { path = "./macros", version = "0.6.2", optional = true }
fxhash = { version = "0.2.1", optional = true }
backtrace = { version = "0.3.67", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"

[features]
default = ["realloc", "zeroed", "macros"]
realloc = ["fxhash"]
zeroed = []
macros = ["checkers-macros"]
