[package]
name = "checkers-macros"
version = "0.2.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/udoprog/checkers"
homepage = "https://github.com/udoprog/checkers"
documentation = "https://docs.rs/checkers"
description = """
Macros for checkers, a sanity checker for global allocations.
"""
keywords = ["memory", "heap", "allocator"]
categories = ["memory-management", "development-tools"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1.0.13", features = ["full"] }

[dev-dependencies]
checkers = {path = "..", version = "0.3.0"}